CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(GCC_LRT_LINK_FLAGS "-lrt")
SET(GCC_MD5_LINK_FLAGS "-lcrypto")
SET(TEST_WORKING_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data/)
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_LRT_LINK_FLAGS} ${GCC_MD5_LINK_FLAGS}" )

ADD_DEFINITIONS(-DGTEST_LANG_CXX11=0 -Dprivate=public -Dprotected=public -DDATA_DIR="${TEST_WORKING_DIR}/")


ADD_SUBDIRECTORY(function)

IF(TEST_RUNNER)
    SEPARATE_ARGUMENTS(TEST_RUNNER_LIST UNIX_COMMAND ${TEST_RUNNER})
ENDIF(TEST_RUNNER)

ADD_CUSTOM_TARGET(functiontest
	COMMAND ${TEST_RUNNER_LIST} ${CMAKE_CURRENT_BINARY_DIR}/function/function
	DEPENDS function
	WORKING_DIRECTORY ${TEST_WORKING_DIR}
	COMMENT "Run Function Test..."
)

ADD_CUSTOM_TARGET(testAll
    COMMAND ${CMAKE_MAKE_PROGRAM} functiontest || true
    COMMENT "Run All Test..."
)

SET(function_SOURCES ${function_SOURCES} PARENT_SCOPE)

# the following is added by qihouliang
























