cmake_minimum_required(VERSION 3.8)
project(gopherwood)

set(CMAKE_CXX_STANDARD 11)

include_directories(src/
        build/src
        gtest/include
        /usr/local/Cellar/boost/1.66.0/include
        /usr/local/include)

set(SOURCE_FILES
        build/src/platform.h
        build/test.cpp
        CMake/CMakeTestCompileNestedException.cpp
        CMake/CMakeTestCompileSteadyClock.cpp
        CMake/CMakeTestCompileStrerror.cpp
        gmock/include/gmock/internal/gmock-generated-internal-utils.h
        gmock/include/gmock/internal/gmock-internal-utils.h
        gmock/include/gmock/internal/gmock-port.h
        gmock/include/gmock/gmock-actions.h
        gmock/include/gmock/gmock-cardinalities.h
        gmock/include/gmock/gmock-generated-actions.h
        gmock/include/gmock/gmock-generated-function-mockers.h
        gmock/include/gmock/gmock-generated-matchers.h
        gmock/include/gmock/gmock-generated-nice-strict.h
        gmock/include/gmock/gmock-matchers.h
        gmock/include/gmock/gmock-more-actions.h
        gmock/include/gmock/gmock-more-matchers.h
        gmock/include/gmock/gmock-spec-builders.h
        gmock/include/gmock/gmock.h
        gmock/src/gmock-cardinalities.cc
        gmock/src/gmock-internal-utils.cc
        gmock/src/gmock-matchers.cc
        gmock/src/gmock-spec-builders.cc
        gmock/src/gmock.cc
        gtest/include/gtest/internal/gtest-death-test-internal.h
        gtest/include/gtest/internal/gtest-filepath.h
        gtest/include/gtest/internal/gtest-internal.h
        gtest/include/gtest/internal/gtest-linked_ptr.h
        gtest/include/gtest/internal/gtest-param-util-generated.h
        gtest/include/gtest/internal/gtest-param-util.h
        gtest/include/gtest/internal/gtest-port.h
        gtest/include/gtest/internal/gtest-string.h
        gtest/include/gtest/internal/gtest-tuple.h
        gtest/include/gtest/internal/gtest-type-util.h
        gtest/include/gtest/gtest-death-test.h
        gtest/include/gtest/gtest-message.h
        gtest/include/gtest/gtest-param-test.h
        gtest/include/gtest/gtest-printers.h
        gtest/include/gtest/gtest-spi.h
        gtest/include/gtest/gtest-test-part.h
        gtest/include/gtest/gtest-typed-test.h
        gtest/include/gtest/gtest.h
        gtest/include/gtest/gtest_pred_impl.h
        gtest/include/gtest/gtest_prod.h
        gtest/src/gtest-death-test.cc
        gtest/src/gtest-filepath.cc
        gtest/src/gtest-internal-inl.h
        gtest/src/gtest-port.cc
        gtest/src/gtest-printers.cc
        gtest/src/gtest-test-part.cc
        gtest/src/gtest-typed-test.cc
        gtest/src/gtest.cc
        mock/TestUtil.h
        src/client/Gopherwood.cpp
        src/client/gopherwood.h
        src/common/Configuration.cpp
        src/common/Configuration.h
        src/common/DateTime.h
        src/common/Exception.cpp
        src/common/Exception.h
        src/common/ExceptionInternal.cpp
        src/common/ExceptionInternal.h
        src/common/Function.h
        src/common/Hash.cpp
        src/common/Hash.h
        src/common/Logger.cpp
        src/common/Logger.h
        src/common/LRUCache.cpp
        src/common/Memory.h
        src/common/StackPrinter.cpp
        src/common/StackPrinter.h
        src/common/Thread.cpp
        src/common/Thread.h
        src/common/Unordered.h
        src/core/SharedMemoryContext.cpp
        src/core/SharedMemoryContext.h
        src/core/SharedMemoryManager.cpp
        src/core/SharedMemoryManager.h
        src/file/FileSystem.cpp
        src/file/FileSystem.h
        src/network/Socket.h
        src/network/Syscall.h
        src/network/TcpSocket.cpp
        src/network/TcpSocket.h
        src/file/InputStream.h
        src/file/InputStream.cpp
        src/file/OutputStream.h
        src/file/OutputStream.cpp
        src/file/File.h
        src/file/FileId.h
        src/file/File.cpp
        src/core/ActiveStatus.cpp
        src/core/ActiveStatus.h
        src/core/ActiveStatusContext.h
        src/core/ActiveStatusContext.cpp
        src/block/BlockOutputStream.cpp
        src/block/BlockOutputStream.h
        src/block/LocalBlockWriter.h
        src/block/LocalBlockWriter.cpp
        src/block/OssBlockWriter.h
        src/block/OssBlockWriter.cpp
        src/block/LocalBlockReader.h
        src/block/LocalBlockReader.cpp
        src/block/OssBlockReader.h
        src/block/OssBlockReader.cpp
        test/hello.cpp
        test/function/TestActiveStatus.cpp
        src/core/BlockStatus.h
        src/core/Manifest.h
        src/core/Manifest.cpp
        src/core/BlockStatus.cpp
        src/core/BlockStatus.cpp
        src/block/BlockInputStream.h
        src/block/BlockInputStream.cpp
        src/core/SharedMemoryObj.h
        src/core/SharedMemoryObj.cpp)

add_executable(gopherwood ${SOURCE_FILES})